# WebShop-AI

./: .env.example  .gitignore  ENHANCEMENT_PLAN.md  PLAN.md  README.md  TASKS.md  package-lock.json  package.json  tsconfig.json
docker/: docker-compose.yml
frontend/widget/: package-lock.json
frontend/widget/src/: App.tsx  ChatWidget.css  ChatWidget.tsx  index.css
ocaml-debugger/: dune-project
ocaml-debugger/src/: dune  tracer.ml
python-agents/: Dockerfile  pyproject.toml
python-agents/src/: __init__.py  main.py
python-agents/src/agents/: __init__.py  base.py  marie_support.py
python-agents/src/analysis/: __init__.py  sentiment.py
python-agents/src/guardrails/: __init__.py  safety.py
python-agents/src/llm/: __init__.py  router.py
python-agents/src/memory/: __init__.py  memory_system.py
python-agents/src/orchestrator/: __init__.py  engine.py
python-agents/src/rag/: __init__.py  retriever.py
python-agents/src/tools/: __init__.py  tools.py
rust-gateway/: Cargo.toml  Dockerfile
rust-gateway/src/: main.rs
rust-gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs
rust-gateway/src/models/: mod.rs
rust-gateway/src/routes/: agents.rs  chat.rs  health.rs  mod.rs
src/agents/chatbot/: index.ts
src/api/: server.ts
src/api/routes/: chat.ts
src/core/llm/: claude.ts  gemini.ts  index.ts  router.ts
