[package]
name = "webshop-ai-gateway"
version = "0.1.0"
edition = "2021"
authors = ["WebShop Team"]
description = "High-performance API Gateway for WebShop-AI Agent System"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# HTTP client (for Python agent communication)
reqwest = { version = "0.12", features = ["json"] }

# Authentication
jsonwebtoken = "9"

# Rate limiting
governor = "0.6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
